testdata/baselines/reference/submodule/conformance/jsdocOuterTypeParameters3.errors.txt
jsdocOuterTypeParameters3.js(5,43): error TS2339: Property 'foo' does not exist on type 'Bar'.


==== jsdocOuterTypeParameters3.js (1 errors) ====
    /** @template {T} */
    class Baz {
        m() {
            class Bar {
                static bar() { this.prototype.foo(); }
                                              ~~~
!!! error TS2339: Property 'foo' does not exist on type 'Bar'.
            }
        }
    }
    